2011-06-20  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrecover.8.xml: Document new settranslate command.
	* recover-src/amrecover.c: Add disk_tpath,
	* recover-src/amrecover.c (translate_octal): New function.
	* recover-src/amrecover.h: Add tpath to DIR_ITEM.
	* recover-src/display_commands.c: Set and use tpath.
	* recover-src/extract_list.c: Use tpath
	* recover-src/help.c: Add settranslate command.
	* recover-src/set_commands.c: Set and tpath.
	* recover-src/uparse.y: Parse settranslate command.
	* recover-src/uscan.l: Add SETTRANSLATE keyword.

2011-06-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm, perl/Amanda/Recovery/Planner.pm,
	  perl/Amanda/Recovery/Clerk.pm,
	  perl/Amanda/Taper/Scribe.pm: Fix for qw syntax in perl 5.14.

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: implement regex caching with two mutex-protected
	  GHashTables (one for REG_NEWLINE, one for !REG_NEWLINE)

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: rename do_validate_regex() to do_regex_compile()

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match_word(): earlier init of static data

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: static corner case regex definitions for
	  match_word()

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match_word(): push down nglob variable, rename it
	  to glob_copy

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: move word wrapping out of match_word() into new
	  helper wrap_word()

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: ambloc_to_regex(): calculate worst case expansion
	  dynamically

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: ambloc_to_regex(): pass beginning and end of regex
	  as arguments

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>